Added session database drivers for 4 databases
Created session drivers for:
- MySQL
- SQL Server (MSSQL)
- PostgreSQL (Postgres)
- SQLite

The config structure has been changed to allow configuration details for these database drivers to be passed to the session objects. The driver class now has to be specified as the 'driver', and any additional session options can be defined in the 'options' array.

 For the default database drivers, the connection details must be specified in the 'configuration' array as part of the session 'options'.

--- a/composer.json
+++ b/composer.json
@@ -30,8 +30,9 @@
         "symfony/thanks": "^1.2"
     },
     "suggest": {
-        "ext-gd": "Required in case you wish to use the GD image generator.",
-        "ext-imagick": "Required in case you wish to use the ImageMagick image generator."
+        "ext-gd": "Required if you wish to use the GD image generator.",
+        "ext-imagick": "Required if you wish to use the ImageMagick image generator.",
+        "ext-pdo": "Required if you wish to use the default PDOSession class."
     },
     "autoload": {
         "psr-4": {
