Removed PayPal sponsor button

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,1 +1,1 @@
-custom:  ['https://paypal.me/nlgamevideosnl', 'https://www.buymeacoffee.com/fabianwennink']
+custom:  ['https://www.buymeacoffee.com/fabianwennink']
